--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: brunosimashadlich@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: brunohadlich
   instagram:
-  linkedin: https://www.linkedin.com/in/bruno-simas-hadlich-42623590/
+  linkedin: bruno-simas-hadlich-42623590/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
