--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: brunohadlich
   instagram:
-  linkedin: bruno-simas-hadlich-42623590/
+  linkedin: bruno-hadlich/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
